# api-orchestrator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/endpoints/: orchestration.py
app/assets/: account-application-settings-edit.json  account-application-settings-get.json  account-billing-settings-edit.json  account-billing-settings-get.json  account-create.json  account-edit.json  account-get-all.json  account-get.json  activate-sku.json  activate-terminal-event.json  activate-terminal-partner-event.json  add-rate-plans-to-account.json  assign-device-to-partner-acct.json  assign-package.json  cancel-package.json  create-account.json  create-custom-charge.json  create-rule.json  customer-get.json  customer-post.json  customer-put.json  deactivate-sku.json  delete-custom-charge.json  delete-rule.json  echo.json  edit-custom-charge.json  edit-device.json  edit-event-instance.json  edit-partner-device.json  edit-rule.json  generate-access-token.json  get-account-aggregated-usage.json  get-account-device-subscription.json  get-account-topk-usage.json  get-all-custom-charges.json  get-all-enterprise-accounts.json  get-all-network-health.json  get-all-network-utilization.json  get-all-networks.json  get-api-key.json  (+45 more)
app/core/: api_registry.py  models.py  orchestrator.py  plan_executor.py
app/utils/: llm_model.py  token_manager.py
